--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.9",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "nodemailer": "^6.4.4",
     "request": "^2.88.0"
   },
