--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "nodemailer": "^6.4.4",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "sharp": "^0.24.1"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
